public/styles/display-tweets.css
article.tweet {
  padding: 0.5em;
  border: 2px solid black;
  margin: 0 .1em 2em;
  transition: box-shadow 0.25s;
}

article.tweet:hover {
  box-shadow: 19px 4px 2px 1px #C9CAE2;
}

article.tweet header {
  justify-content: space-between;
  align-items: center;
  height: 50px;
  margin: 0 0 1em;
}

article.tweet header div {
  align-items: center;

}

div.profile-pic-username i {
  margin-right: 0.5em
}

div.profile-pic-username img {
  height: 45px;
  margin-right: 0.25em;
}

.handle {
  color: #C5CBE2;
}

p.handle {
  margin: 0;
}

section.tweet-content p {
  font-size: 0.8em;
  font-weight: 600;
  margin: 0 0.5em;
  padding-bottom: 0.5em;
  border-bottom: 2px solid black;
}

article.tweet footer {
  margin: 0.25em 0.5em 0.5em;
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}

article.tweet footer p {
  margin: 0;
  font-size: 0.5em;
}

article.tweet footer div {
  width: 55px;
  display: flex;
  justify-content: space-around;
}

article.tweet footer div i {
  font-size: 14px;
  color: #47569D;
  cursor: pointer;
}

article.tweet footer div i:hover {
  color: #C7992D;
}

